--- a/My ER Build - ACS 1700/stylesheet.css
+++ b/My ER Build - ACS 1700/stylesheet.css
@@ -3,7 +3,7 @@
 
 body {
 /* Set background colour */
-background-color: rgb(96, 94, 94);
+background-color: rgb(94, 96, 94);
 }
 
 main {
@@ -34,18 +34,18 @@ text-shadow: 15px 15px 15px hotpink,
 }
 
 audio {
-width: 1000px;
+width: 500px;
 }
 
 header figure {
 font-size: 1.5em;
-font-family: Fantasy, Arial, Helvetica, sans-serif;
+font-family: zapfino;
 color: red;
 }
 
 h1 {
 /* larger text coloured red */
-font-family: Fantasy, Arial, Helvetica, sans-serif;
+font-family: zapfino, fantasy;
 font-weight: 1000;
 font-size: 4em;
 color: red;
@@ -69,7 +69,7 @@ nav ul li a {
 display: flex;
 /* display: block; */
 flex-direction: column;
-flex-wrap: wrap;
+/* flex-wrap: wrap; */
 box-shadow: 10px 10px 10px #333;
 border-radius: 1em;
 max-width: 100px;
@@ -107,16 +107,6 @@ box-shadow: 5px 5px 20px black;
 /* background-color: black; */
 }
 
-section figure a {
-/* display: flex;
-border: 5px solid hotpink;
-border-radius: 3em; */
-}
-
-/* nav {
-height: none;
-} */
-
 br {
 line-height: 3em;
 }
@@ -130,61 +120,46 @@ flex-wrap: wrap;
 }
 
 nav ul li{
-/* Make each listed element a button that can be clicked */
-/* large enough to look click-able but not dominating the page */
+/* I need this flex box to display to remove the styling of the dots from a list. */
+/* Also to keep the box set at a given size and not shrink to the size of the text. */
 display: flex;
-/* flex-wrap: wrap; */
-/* display: block; */
-/* flex-direction: column; */
-/* height: 5em; */
-/* width: 8em; */
-/* border-radius: 1em; */
-/* border: 5px solid hotpink; */
-/* justify-content: center; */
-/* align-content: center; */
-/* padding: fit-content; */
-/* margin: 0 0.5em; */
-/* background-color: rgba(244, 126, 126, 0.695); */
-
-
 }
 
 article {
-/* Can you group all of the article sections to stick together, but seperate the footer section so it always aligns to the bottom of the page? */
 display: flex;
-/* flex-direction: row; */
 flex-wrap: wrap;
+border: 1em solid #333;
+border-top: 0.5em;
+margin: 0 -0.5em
 }
 
 section h2 {
-font-family: Fantasy, Arial, Helvetica, sans-serif;
-font-size: 2em;
+font-family: zapfino;
+font-size: 3em;
 text-shadow: 10px 10px 10px #333;
 color: red;
 }
 
 article h2 {
-font-family: Fantasy, Arial, Helvetica, sans-serif;
+font-family: zapfino, fantasy;
 font-size: 3em;
 text-shadow: 10px 10px 10px #333;
 color: red;
-/* display: block; */
 }
 
 h3 {
 font-size: 2em;
-font-family: Fantasy, Arial, Helvetica, sans-serif;
+font-family: zapfino, fantasy;
 }
 
 article section {
 /* each section should look like a card that auto aligns to the screen size */
 /* Should read top down, without information being cut out from the box */
+/* I had to remove the video from the HTML file, it broke my flex box so much and I couldn't wrap my head around how to keep it. */
 display: flex;
 flex-direction: column;
-/* justify-content: space-around; */
 flex-wrap: wrap;
 box-shadow: 20px 20px 20px #333;
-/* width: 550px; */
 max-width: 550px;
 max-height: 800px;
 min-height: 800px;
@@ -194,7 +169,6 @@ border-radius: 3em;
 padding: 1em;
 margin: 2em;
 background-color: rgba(244, 126, 126, 0.695);
-/* text-align: center; */
 }
 
 article section aside p {
@@ -202,8 +176,10 @@ color: aqua;
 }
 
 article section p { 
-font-size: 20px;
+font-size: 1.5em;
 font-weight: 1000;
+font-family: Helvetica, Arial, sans-serif;
+color: rgb(155, 40, 155);
 margin: 0.5em 0;
 padding: 0;
 }
@@ -211,27 +187,54 @@ padding: 0;
 article section:hover {
 color: white;
 background-color: red;
-/* cursor: pointer; */
 }
 
 blockquote {
 /* Should have correct spacing between line-breaks */
 line-height: 1.25em;
-padding: 0 0 0 0.5em;
+padding: 0 0 0 0;
 margin: 0;
+font-size: 1.5em;
+font-family: cursive;
+}
+
+abbr {
+text-decoration-line: none;
 }
 
 figcaption {
-/* Should be aligned to the image correctly */
+/* The double naming was redundant but having the caption makes sense in the mark-up. */
+display: none;
 }
-iframe {
-/* This element should be glued within the section box but comanding the space of 2 boxes so the video can nest along side the image. */
-/* display: flex;
-flex-direction: right;
-align-items: flex-end;
-border: 1em solid black;
+
+.footer {
+border: 1em solid #333;
+border-top: 0.5em;
+padding: 0 1em;
+margin: 0 -0.5em -0.5em -0.5em;
+}
+
+.footer h2 {
+font-size: 3em;
+margin: 0;
 padding: 0;
-margin: 0; */
+}
+
+.footer p {
+font-size: 1.5em;
+font-family: Helvetica, Arial, sans-serif;
+}
+
+footer {
+display: flex;
+flex-direction: column;
+box-shadow: 20px 20px 20px #333;
+max-width: 1200px;
+border: 5px solid hotpink;
+border-radius: 3em;
+padding: 1em 1em 1em 3em;
+margin: 2em;
+background-color: rgba(244, 126, 126, 0.695);
 }
 
 address, a {
